Ingress/k8s-ingress-route.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world-ingress
  namespace: ingress-basic
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /hello-world-one/?(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: aks-helloworld-one
            port:
              number: 80
      - path: /hello-world-two/?(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: aks-helloworld-two
            port:
              number: 80
      - path: /(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: aks-helloworld-one
            port:
              number: 80
